--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
+<style>
+
+  body {
+    /* The image used */
+    background-image: url('dark-purple-3840x2160-17330.png');
+
+    /* Full height */
+    height: 100%; 
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+</style>
+
 <body>
-  <app-root></app-root>
+  <app-header></app-header>
 </body>
 </html>
