--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   inset-0
   z-[-1]
   bg-[url('../public/dark-purple-3840x2160-17330.png')]
-  transform translate-z-0
+  [transform:translate3d(0,0,0)]
 
 ">
 
