--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,14 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- The <style> tag has been removed -->
 </head>
-<body class="
-  m-0 p-0 h-screen relative overflow-x-hidden
-  bg-[url('../public/dark-purple-3840x2160-17330.png')]
-">
-
-
+<body class="m-0 p-0 h-screen relative overflow-x-hidden">
+   <!-- Starfield layers -->
+    <div class="starfield"></div>
+    
+    <!-- Shooting stars -->
+    <div class="shooting-star"></div>
+    <div class="shooting-star"></div>
+    <div class="shooting-star"></div>
   <app-main></app-main> <!-- Your Angular app's root component -->
 </body>
 </html>
